# sm-evals

./: .env.example  .gitignore  clear.md  doc.md  index.ts  metrics-research.md  package.json  project-config.json  pyproject.toml  readme.md  readne.md  switching-to-beir.md  temp.md
locomo_data/data/: locomo10.json
mds/: improvements.md  switching-to-beir.md
py-metrics/: README.md  download_beir.py  pyproject.toml  requirements.txt
py-metrics/beir_data/scifact/: qrels.json  queries.json
py-metrics/src/: bleu.py  calculate_metrics.py  evaluate_results.py  f1.py  list_datasets.py  main.py  recall.py
py-metrics/src/py_metrics/: beir_downloader.py  beir_evaluator.py  calculate_metrics.py  compare-res.py  download_beir.py  list_datasets.py  main.py  plot.py
py-metrics/src/py_metrics/evals/: beir_evaluator.py
py-metrics/src/py_metrics/types/: metrics.py
results/: metrics_by_category.csv
src/: delete-memories.ts  evaluate-from-file.ts  index.ts  load-beir.ts  load.ts  results.ts  search-file-eval.ts  search.ts
src/api/: supermemory.ts
src/evaluation/: evaluate-from-file.ts  getMetrics.ts  results.ts
src/evaluation/metrics/: bleu.ts  f1.ts  precisionRecall.ts
src/evaluation/search/: search-beir.ts  search-file-eval.ts  search.ts  searchUtils.ts  semanticMetrics.ts
src/examples/: semantic-demo.ts
src/scripts/: delete-memories.ts  load-beir.ts  load.ts
src/search/: search.ts  utils.ts
src/sm_evals/: __init__.py
src/types/: beir.ts  locomo.ts  metrics.ts  send.ts  signale.d.ts  supermemory.ts
src/utils/: config.ts  getCategory.ts  logger.ts
