[project]
name = "py-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.6.1",
    "fastapi[standard]>=0.115.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
include = ["src/evaluation/py-metrics"]

[tool.hatch.build.targets.sdist]
include = ["py-metrics/src/evaluation/py-metrics"]



