[project]
name = "py-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "pydantic==2.7.0",
    "uvicorn==0.30.0",
    "nltk==3.8.1",
    "scikit-learn==1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/py_metrics"]

[tool.hatch.build.targets.sdist]
include = ["src/py_metrics", "pyproject.toml", "README.md"]

