[project]
name = "py-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.4.2",
    "uvicorn>=0.24.0",
    "nltk>=3.8.1",
    "scikit-learn>=1.3.0",
    "beir>=2.1.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.2",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/py_metrics"]

[tool.hatch.build.targets.sdist]
include = ["src/py_metrics", "pyproject.toml", "README.md"]
